--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
                 <data android:scheme="http" />
                 <data android:scheme="https" />
-                <data android:host="${IP}" />
+                <data android:host="eye-phone.top" />
             </intent-filter>
         </activity>
 
