--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,14 +24,13 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(rootProject.file("keystore.properties").newDataInputStream())
 
 def id = localProperties.getProperty('id')
-def s = file(localProperties['dart_config_path']).readLines().find { it.startsWith('const IP') }.split('=')[1]
-def ip = s.substring(2, s.length()-2)
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    kotlinOptions { jvmTarget = '1.8' }
     signingConfigs {
         onek {
             storeFile file(keystoreProperties['storeFile'])
@@ -40,7 +39,7 @@ android {
             keyPassword keystoreProperties['keyPassword']
         }
     }
-    compileSdk flutter.compileSdkVersion
+    compileSdk 34
     ndkVersion "25.1.8937393"
 
     compileOptions {
@@ -54,7 +53,7 @@ android {
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        manifestPlaceholders.IP=ip
+        manifestPlaceholders.pkg = id
     }
 
     buildTypes {
