--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="${pkg}">
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -9,6 +10,7 @@
 
     <application
         android:name="${applicationName}"
+        android:allowBackup="true"
         android:icon="@mipmap/launcher_icon"
         android:label="eyePhone">
         <activity
@@ -17,6 +19,7 @@
             android:exported="true"
             android:hardwareAccelerated="true"
             android:launchMode="singleInstance"
+            android:resizeableActivity="true"
             android:theme="@style/LaunchTheme"
             android:windowSoftInputMode="adjustResize">
             <meta-data
