--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,22 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  flutter_webrtc: ^0.9.47
-  firebase_core: ^2.24.2
-  cloud_firestore: ^4.14.0
+  flutter_webrtc: ^0.9.48+hotfix.1
+  firebase_core: ^2.25.4
+  cloud_firestore: ^4.15.4
   shared_preferences: ^2.2.2
-  permission_handler: ^11.1.0
+  permission_handler: ^11.2.1
   qr_flutter: ^4.1.0
-  mobile_scanner: ^3.5.5
-  device_info_plus: ^9.1.1
-  share_plus: ^7.2.1
+  mobile_scanner: ^4.0.0
+  device_info_plus: ^9.1.2
+  share_plus: ^7.2.2
   app_links: ^3.5.0
-  flutter_bloc: ^8.0.0
+  flutter_bloc: ^8.1.3
+  connectivity_plus: ^5.0.2
+  screen_brightness: ^1.0.0
+  audioplayers: ^5.2.1
+  in_app_purchase: ^3.1.13
+
 
 dev_dependencies:
   flutter_test:
@@ -36,3 +41,5 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/siren.wav
