--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   screen_brightness: ^1.0.0
   audioplayers: ^5.2.1
   in_app_purchase: ^3.1.13
+  firebase_auth: ^4.17.4
 
 
 dev_dependencies:
@@ -43,3 +44,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/siren.wav
+    - assets/img/google.png
